afegida la pàgina grassy, modificats els apunts

--- a/apunts.html
+++ b/apunts.html
@@ -36,6 +36,8 @@
 
     <p><a href="./position.html">Exemples de posicionamient <i>absolute</i>, <i>relative</i>, <i>fixed</i> i <i>sticky</i></a></p>
 
+    <p><a href="">Web maquetada: Grassy Green</a></p>
+
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
