ejercicio autopista, forms y display grid

--- a/html+css/apunts.html
+++ b/html+css/apunts.html
@@ -14,6 +14,8 @@
 
     <p><a href="./displayflex.html">Proves de <i>display: flex</i></a></p>
 
+    <p><a href="./displaygrid.html">Proves de <i>display: grid</i></a></p>
+
     <p><a href="./noticies.html" target="blank">Maquetació de notícies</a></p>
 
     <p><a href="./estilos.html" target="blank">Proves d'estil</a></p>
@@ -36,7 +38,11 @@
 
     <p><a href="./position.html">Exemples de posicionamient <i>absolute</i>, <i>relative</i>, <i>fixed</i> i <i>sticky</i></a></p>
 
-    <p><a href="">Web maquetada: Grassy Green</a></p>
+    <p><a href="./grassy/index.html">Web maquetada: Grassy Green</a></p>
+
+    <p><a href="./autopista/index.html">Web maquetada: Autopista</a></p>
+
+    <p><a href="./galeria/index.html">Web maquetada: Galeria</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
