afegits ultims exercicis, actualitzats els "apunts"

--- a/html+css/apunts.html
+++ b/html+css/apunts.html
@@ -12,10 +12,6 @@
     <h2>Bit Academy - Singulars 2020</h2>
     <p><a href="./hola.html" target="blank">Pàgina de proves</a></p>
 
-    <p><a href="./displayflex.html">Proves de <i>display: flex</i></a></p>
-
-    <p><a href="./displaygrid.html">Proves de <i>display: grid</i></a></p>
-
     <p><a href="./noticies.html" target="blank">Maquetació de notícies</a></p>
 
     <p><a href="./estilos.html" target="blank">Proves d'estil</a></p>
@@ -34,6 +30,8 @@
 
     <p><a href="./websimple.html">Maquetació d'un web simple</a></p>
 
+    <p><a href="./displayflex.html">Proves de <i>display: flex</i></a></p>
+
     <p><a href="./displays.html">Maquetació de finestres amb display <i>flex</i>, <i>block</i> i <i>float</i>. Enllaços amb hover</a></p>
 
     <p><a href="./position.html">Exemples de posicionamient <i>absolute</i>, <i>relative</i>, <i>fixed</i> i <i>sticky</i></a></p>
@@ -42,7 +40,13 @@
 
     <p><a href="./autopista/index.html">Web maquetada: Autopista</a></p>
 
-    <p><a href="./galeria/index.html">Web maquetada: Galeria</a></p>
+    <p><a href="./displaygrid.html">Proves de <i>display: grid</i></a></p>
+
+    <p><a href="./displaygriditems.html">Proves de <i>display: grid</i> amb elements irregulars</a></p>
+
+    <p><a href="./forms.html">Proves de formularis</a></p>
+
+    <p><a href="./animacions.html">Proves d'animacions</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
