exercises of responsive design

--- a/html+css/apunts.html
+++ b/html+css/apunts.html
@@ -48,6 +48,10 @@
 
     <p><a href="./animacions.html">Proves d'animacions</a></p>
 
+    <p><a href="./media-simple.html">Exemple simple de media query</a></p>
+
+    <p><a href="./media.html">Diferent maneres d'aplicar les media queries</a></p>
+
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
