overrinding and priorities with media queries, responsive design

--- a/html+css/hola.html
+++ b/html+css/hola.html
@@ -24,6 +24,17 @@
         .oculto{
             display: none;
         }
+        #preferencia{
+            width: 200px;
+            height: 200px;
+            background-color: coral;
+        }
+        #preferencia{
+            background-color: cornflowerblue;
+        }
+        #preferencia{
+            background-color: darkgreen;
+        }
     </style>
 </head>
 <body>
@@ -167,6 +178,10 @@
     <p style="font-size: 50px;">
         <a href="http://twitter.com"><i class="fab fa-twitter-square"></i></a> <a href="http://facebook.com"><i class="fab fa-facebook-square"></i></a> <a href="http://instagram.com"><i class="fab fa-instagram-square"></i></a>
     </p>
+
+    <div id="preferencia">
+        <p>Els elements d'estil repetits sobrescriuen els anteriors. Aquest div ha sigut vermell i blau abans de ser verd</p>
+    </div>
 
     <p id="end"><a href="#inici">A dalt de tot</a></p><br>
 </body>
