--- a/html+css/apunts.html
+++ b/html+css/apunts.html
@@ -10,47 +10,54 @@
 <body>
     <h1>Exercicis HTML del curs de Front End</h1>
     <h2>Bit Academy - Singulars 2020</h2>
+
+    <p>Aquesta és la col·lecció d'exercicis del mòdul d'HTML i CSS del curs de Front End del programa Singulars 2020.</p>
+
     <p><a href="./hola.html" target="blank">Pàgina de proves</a></p>
 
-    <p><a href="./noticies.html" target="blank">Maquetació de notícies</a></p>
+    <p><a href="./maquetacions/noticies.html" target="blank">Maquetació de notícies</a></p>
 
     <p><a href="./estilos.html" target="blank">Proves d'estil</a></p>
 
-    <p><a href="./maquetació-vertical.html" target="blank">Maquetació vertical amb imatges</a></p>
+    <p><a href="./maquetacions/maquetació-vertical.html" target="blank">Maquetació vertical amb imatges</a></p>
 
-    <p><a href="./teatro.html">Maquetació amb scroll</a></p>
+    <p><a href="./displays/teatro.html">Maquetació amb scroll</a></p>
 
-    <p><a href="./trescolumnas.html">Maquetació en columnes</a></p>
+    <p><a href="./displays/trescolumnas.html">Maquetació en columnes</a></p>
 
-    <p><a href="./trescolumnasflex.html">Maquetació en columnes amb <i>display: flex</i></a></p>
+    <p><a href="./displays/trescolumnasflex.html">Maquetació en columnes amb <i>display: flex</i></a></p>
 
-    <p><a href="./partenonflex.html">Partenó columnes amb <i>display: flex</i></a></p>
+    <p><a href="./displays/partenonflex.html">Partenó columnes amb <i>display: flex</i></a></p>
 
-    <p><a href="./estil1.html">Pàgina amb diferents fulls de CSS</a></p>
+    <p><a href="./tres-estils/estil1.html">Pàgina amb diferents fulls de CSS</a></p>
 
-    <p><a href="./websimple.html">Maquetació d'un web simple</a></p>
+    <p><a href="./maquetacions/websimple.html">Maquetació d'un web simple</a></p>
 
-    <p><a href="./displayflex.html">Proves de <i>display: flex</i></a></p>
+    <p><a href="./displays/displayflex.html">Proves de <i>display: flex</i></a></p>
 
-    <p><a href="./displays.html">Maquetació de finestres amb display <i>flex</i>, <i>block</i> i <i>float</i>. Enllaços amb hover</a></p>
+    <p><a href="./displays/displays.html">Maquetació de finestres amb display <i>flex</i>, <i>block</i> i <i>float</i>. Enllaços amb hover</a></p>
 
-    <p><a href="./position.html">Exemples de posicionamient <i>absolute</i>, <i>relative</i>, <i>fixed</i> i <i>sticky</i></a></p>
+    <p><a href="./displays/position.html">Exemples de posicionamient <i>absolute</i>, <i>relative</i>, <i>fixed</i> i <i>sticky</i></a></p>
 
-    <p><a href="./grassy/index.html">Web maquetada: Grassy Green</a></p>
+    <p><a href="#">Web maquetada: Grassy Green (<span class="red">falta</span>)</a></p>
 
     <p><a href="./autopista/index.html">Web maquetada: Autopista</a></p>
 
-    <p><a href="./displaygrid.html">Proves de <i>display: grid</i></a></p>
+    <p><a href="./displays/displaygrid.html">Proves de <i>display: grid</i></a></p>
 
-    <p><a href="./displaygriditems.html">Proves de <i>display: grid</i> amb elements irregulars</a></p>
+    <p><a href="./displays/displaygriditems.html">Proves de <i>display: grid</i> amb elements irregulars</a></p>
 
     <p><a href="./forms.html">Proves de formularis</a></p>
 
     <p><a href="./animacions.html">Proves d'animacions</a></p>
 
-    <p><a href="./media-simple.html">Exemple simple de media query</a></p>
+    <p><a href="./responsive/media-simple.html">Exemple simple de <i>media query</i></a></p>
 
-    <p><a href="./media.html">Diferent maneres d'aplicar les media queries</a></p>
+    <p><a href="./responsive/media.html">Diferent maneres d'aplicar les <i>media queries</i></a></p>
+
+    <p><a href="./responsive/media-overriding.html">Exemple de <i>media queries</i> que se sobrescriuen (<span class="red">importància de l'ordre</span>)</a></p>
+
+    <p><a href="./responsive/responsive-div.html">Arxiu de proves de <i>media queries</i></a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
