--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -8,10 +8,10 @@
     <title>Exercicis JS</title>
 </head>
 <body>
-    <h1>Exercicis HTML del curs de Front End</h1>
+    <h1>Exercicis JavaScript ES6 del curs de Front End</h1>
     <h2>Bit Academy - Singulars 2020</h2>
     
-    <p><a href="./hola.html" target="blank">Pàgina de proves</a></p>
+    <p><a href="./prueba.html" target="blank">Pàgina de proves</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
