--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -11,7 +11,11 @@
     <h1>Exercicis JavaScript ES6 del curs de Front End</h1>
     <h2>Bit Academy - Singulars 2020</h2>
     
-    <p><a href="./prueba.html" target="blank">Pàgina de proves</a></p>
+    <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
+    <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
+    <p><a href="./condicional_if.html" target="blank">Condicional <i>if</i></a></p>
+    <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
+    <p><a href="./funcions.html" target="blank">Definició i ús de funcions</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
