intro als arrays i objectes, exercicis de funcions i funcions arrow

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -13,9 +13,12 @@
     
     <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
     <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
+    <p><a href="./arrays.html" target="blank">Exercicis amb arrays</a></p>
+    <p><a href="./objectes.html" target="blank">Exercicis amb objectes</a></p>
     <p><a href="./condicional_if.html" target="blank">Condicional <i>if</i></a></p>
     <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
     <p><a href="./funcions.html" target="blank">Definició i ús de funcions</a></p>
+    <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
