added string methods

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -19,6 +19,7 @@
     <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
     <p><a href="./funcions.html" target="blank">Definició i ús de funcions</a></p>
     <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
+    <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
