--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -20,6 +20,7 @@
     <p><a href="./funcions.html" target="blank">Definició i ús de funcions</a></p>
     <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
     <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
+    <p><a href="./number_methods.html" target="blank">Mètodes amb number</a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
