--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -21,6 +21,8 @@
     <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
     <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
     <p><a href="./number_methods.html" target="blank">Mètodes amb number</a></p>
+    <p><a href="./bucle_for.html" target="blank">Exercicis amb el blucle <i>for</i></a></p>
+    <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>    
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
