metodes d'arrays, bucle for/of

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -13,7 +13,6 @@
     
     <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
     <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
-    <p><a href="./arrays.html" target="blank">Exercicis amb arrays</a></p>
     <p><a href="./objectes.html" target="blank">Exercicis amb objectes</a></p>
     <p><a href="./condicional_if.html" target="blank">Condicional <i>if</i></a></p>
     <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
@@ -21,6 +20,7 @@
     <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
     <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
     <p><a href="./number_methods.html" target="blank">Mètodes amb number</a></p>
+    <p><a href="./array_methods.html" target="blank">Mètodes amb arrays</a></p>
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el blucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>    
 
