--- a/javascript/array_methods.html
+++ b/javascript/array_methods.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Methods</title>
+    <title>Array Methods</title>
 </head>
 <body>
-    <script src="number_methods.js"></script>
+    <script src="array_methods.js"></script>
 </body>
 </html>
