--- a/javascript/string_methods.html
+++ b/javascript/string_methods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mètodes Strings</title>
+    <title>Strings Methods</title>
 </head>
 <body>
     <script src="string_methods.js"></script>
