afegida la col·leccio d'exercicis

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -21,8 +21,8 @@
     <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
     <p><a href="./number_methods.html" target="blank">Mètodes amb number</a></p>
     <p><a href="./array_methods.html" target="blank">Mètodes amb arrays</a></p>
-    <p><a href="./bucle_for.html" target="blank">Exercicis amb el blucle <i>for</i></a></p>
-    <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>    
+    <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
+    <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
