--- a/javascript/funcions.html
+++ b/javascript/funcions.html
@@ -164,7 +164,7 @@
             console.log(missatge + " (Estic dins d'una funció)");
         }
 
-        function convertTemp(temp, mode) {
+        function convertTemp(temp, mode = "C") {
             var temperatura = temp;     // guarda la temperatura
             var temperaturaT;           // inicialitza la temperatura transformada
 
