--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -24,6 +24,10 @@
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
 
+    <hr>
+
+    <p><a href="./exercicis/exercicis.html" target="blank">Repàs i col·lecció d'exercicis</a></p>
+
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
