afegit repas de arrays i objectes i ultims exercicis BIG JS REPAS 2020

--- a/html+css/sass/sassy.html
+++ b/html+css/sass/sassy.html
@@ -12,7 +12,7 @@
     <div class="cont">
         <header>
             <img src='https://cdn.worldvectorlogo.com/logos/sass-1.svg' alt=''/>
-            <h2>This is a SASS test</h2>
+            <h2>This is a SASS&trade; test</h2>
         </header>
         <main>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatum quibusdam cumque animi quae, architecto possimus quisquam vero fugiat ipsa perspiciatis distinctio repellat, quos, maiores dolorum deserunt odit quasi! Tempore necessitatibus vitae exercitationem reiciendis assumenda voluptatem quod libero quaerat labore fugiat. </p>
