separats en dos documents els exercicis resolts dels enunciats

--- a/javascript/exercicis/exercicis.html
+++ b/javascript/exercicis/exercicis.html
@@ -14,7 +14,7 @@
 
     <script src="./repas.js"></script>
 
-    <script src="./exercicis.js"></script>
+    <script src="./exercicis_resolts.js"></script>
 
     <button type="button" onclick="document.write(`Això s'ha escrit amb document.write() després de carregar la pàgina`)">Executa un <i>document.write()</i></button>
 </body>
