reestructurades les carpetes, afegits exercicis de DOM

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -23,10 +23,12 @@
     <p><a href="./array_methods.html" target="blank">Mètodes amb arrays</a></p>
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
+    <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector</i>, <i>addEventListener</i> i propietats del DOM</a></p>
 
     <hr>
 
     <p><a href="./exercicis/exercicis.html" target="blank">Repàs i col·lecció d'exercicis</a></p>
+
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
