afegits exercicis nous, afegit exemples de querySelectorAll i canvis de classe

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -24,10 +24,12 @@
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
     <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector</i>, <i>addEventListener</i> i propietats del DOM</a></p>
+    <p><a href="./filtre_elements.html" target="blank">Exercicis de <i>querySelectorAll</i> i canvis d'atributs i classes </a></p>
 
     <hr>
 
-    <p><a href="./exercicis/exercicis.html" target="blank">Repàs i col·lecció d'exercicis</a></p>
+    <p><a href="./exercicis_repas/exercicis.html" target="blank">Repàs i col·lecció d'exercicis</a></p>
+    <p><a href="./exercicis_DOM/exercicis_DOM.html"  target="blank">Col·lecció d'exercicis de DOM</a></p>
 
 
     <h6>&copy; Omar Olmedo Ferrer</h6>
