afegits exercicis de filtres i carta de presentacio

--- a/javascript/filtre_elements.html
+++ b/javascript/filtre_elements.html
@@ -47,7 +47,7 @@
             margin: 1em
         }
         .blue{
-            background-color: rgb(161, 157, 207);            
+            background-color: rgb(152, 183, 212);            
         }
         .red{
             background-color: rgb(228, 152, 152);
@@ -190,7 +190,7 @@
 
     <!-- Filtrar elements del DOM -->
     <div id="filtre">
-        <h3>Filtre amb canvis de classe</h3>
+        <h3>Filtrar elements per classe</h3>
         <a href="" id="b">Blaus</a>
         <a href="" id="r">Vermells</a>
         <a href="" id="g">Verds</a>
