--- a/javascript/exercicis_DOM/exercicis_DOM.html
+++ b/javascript/exercicis_DOM/exercicis_DOM.html
@@ -44,9 +44,9 @@
         
         <li><a href="">Exercici 12.2</a>: Llista de la compra super guai. Igual que la que funcionava amb prompts però amb imput de text, selecció de secció del supermercat i botó per ordenar alfabéticament.</li><br>
 
-        <li><a href="">Exercici 13</a>: Fes un selector de propietats d'una caixa (nom, material, mida i missatge) amb input text i selects que al clicar un botó escrigui al HTML "Omar ha pedido una caja de sushi tamaño grande (con mucho wasabi)".</li>
+        <li><a href="">Exercici 13</a>: Fes un selector de propietats d'una caixa (nom, material, mida i missatge) amb input text i selects que al clicar un botó escrigui al HTML "Omar ha pedido una caja de sushi tamaño grande (con mucho wasabi)".</li><br>
         
-        <li><a href="">Exercici 14</a>: Carta de presentació interactiva (veure la captura als arxius del Teams).</li><br>
+        <li><a href="">Exercici 14</a>: Carta de presentació interactiva (veure la captura als arxius del Teams). Pista: useu document.querySelectorAll().</li><br>
 
         <li><a href="">Exercici 15</a>: Filtre. Fes un filtre de elements que et mostri els d'un color concret (blau, verd, groc, vermell), tots els elements o cap element afegint o treient la classe "show".</li><br>
 
