--- a/javascript/exercicis_DOM/exercicis_DOM.html
+++ b/javascript/exercicis_DOM/exercicis_DOM.html
@@ -51,6 +51,8 @@
         <li><a href="">Exercici 15</a>: Filtre. Fes un filtre de elements que et mostri els d'un color concret (blau, verd, groc, vermell), tots els elements o cap element afegint o treient la classe "show".</li><br>
 
         <li><a href="">Exercici 15.1</a>: Filtre guai. Fes un filtre de elements que et mostri els d'un color concret (blau, verd, groc, vermell), tots els elements o cap element amb una animació que faci que els elements que sobren desapareguin d'alguna manera.</li><br>
+
+        <li><a href="">Exercici 16</a>: Selector d'estils CSS. Modifica la pàgina que vam fer amb tres estils diferents perque sigui una SPA (Single Page Application)</li><br>
     </ul>
 </body>
 </html>
