added links to apunts

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -13,6 +13,7 @@
     
     <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
     <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
+    <p><a href="./debugging.html" target="blank">Proves de debugging amb Chrome, VSC i <i>debugger</i></a></p>
     <p><a href="./objectes.html" target="blank">Exercicis amb objectes</a></p>
     <p><a href="./condicional_if.html" target="blank">Condicional <i>if</i></a></p>
     <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
@@ -23,8 +24,11 @@
     <p><a href="./array_methods.html" target="blank">Mètodes amb arrays</a></p>
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
-    <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector</i>, <i>addEventListener</i> i propietats del DOM</a></p>
+    <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector()</i>, <i>addEventListener()</i> i propietats del DOM</a></p>
     <p><a href="./filtre_elements.html" target="blank">Exercicis de <i>querySelectorAll</i> i canvis d'atributs i classes </a></p>
+    <p><a href="./funcions_temps.html" target="blank">Funcions cronometrades: <i>setInterval()</i> i <i>setTimeout()</i></a></p>
+    <p><a href="./countdown.html" target="blank">Exemple de funcions cronometrades: compte enrere</a></p>
+    <p><a href="./tres-estils/estils.html" target="blank">Exercici selector de tema sense canviar de pàgina (tres estils)</a></p>
 
     <hr>
 
