--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -8,8 +8,9 @@
     <title>Exercicis JS</title>
 </head>
 <body>
-    <h1>Exercicis JavaScript ES6 del curs de Front End</h1>
-    <h2>Bit Academy - Singulars 2020</h2>
+    <h1 title="això és un titol h1">Exercicis JavaScript ES6 del curs de Front End</h1>
+    <h2 title="això és un titol h2">Bit Academy - Singulars 2020</h2>
+    <p style="font-size: .8em; margin: 0">(Posa el ratolí sobre els títols)</p>
     
     <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
     <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
@@ -36,6 +37,6 @@
     <p><a href="./exercicis_DOM/exercicis_DOM.html"  target="blank">Col·lecció d'exercicis de DOM</a></p>
 
 
-    <h6>&copy; Omar Olmedo Ferrer</h6>
+    <h6 title="això és un títol h6">&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
