renamed some files

--- a/javascript/lang_import_export.html
+++ b/javascript/lang_import_export.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traduccions</title>
 
-    <script src="./import-export.js" type="module"></script>
+    <script src="./import_export.js" type="module"></script>
 </head>
 <body>
     <h2>Exemple de traducció d'una web</h2>
