exercici usant les propietats del scroll i la posició del mouse. barra d'scroll personalitzada

--- a/javascript/parallax.html
+++ b/javascript/parallax.html
@@ -54,8 +54,8 @@
         var two = document.querySelector("#two")
 
         window.addEventListener("scroll", () => {
-            one.style.top = -(window.scrollY*.1) + "px"
-            two.style.top = -(window.scrollY*.05) + "px"
+            one.style.top = -(window.scrollY * 0.1) + "px"
+            two.style.top = -(window.scrollY * 0.05) + "px"
         })
     </script>
 </body>
