added line breaks

--- a/javascript/text_animations.html
+++ b/javascript/text_animations.html
@@ -38,14 +38,14 @@
         <p>Animació amb <a href="http://animate.style">Animate.css</a>:</p>
         <div class="animate__animated animate__fadeIn">
             <h1 class="animate__animated animate__slideInDown">This is some text</h1>
-        </div><br>
+        </div><br><br>
 
         <p>Animació amb JavaScript:</p>
         <h1 id="animated">My name is Tom Riddle</h1>
-        <button id="change">Change text</button><br><br><br>
+        <button id="change">Change text</button><br><br><br><br>
 
         <p>Animació amb CSS (hover):</p>
-        <h1 class="move">This is even more text</h1>
+        <h1 class="move">This is even more text</h1><br>
 
         <p>Animació GIF:</p>
         <img class="gif" src="img/slowpoke.png" alt="" width="200px">
