ordenats els arxius al document apunts

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -12,31 +12,47 @@
     <h2 title="això és un titol h2">Bit Academy - Singulars 2020</h2>
     <p style="font-size: .8em; margin: 0">(Posa el ratolí sobre els títols)</p>
     
+    <br><h3>Exercicis generals:</h3>
     <p><a href="./prueba.html" target="blank">Declaració de variables i aritmètica. Execució d'scripts</a></p>
     <p><a href="./strings.html" target="blank">Exercicis amb strings. Outputs. CSS al <i>console.log()</i></a></p>
     <p><a href="./debugging.html" target="blank">Proves de debugging amb Chrome, VSC i <i>debugger</i></a></p>
     <p><a href="./objectes.html" target="blank">Exercicis amb objectes</a></p>
+
+    <br><h3>Exercicis de lògica:</h3>
     <p><a href="./condicional_if.html" target="blank">Condicional <i>if</i></a></p>
     <p><a href="./condicional_switch.html" target="blank">Condicional <i>switch</i></a></p>
     <p><a href="./funcions.html" target="blank">Definició i ús de funcions</a></p>
     <p><a href="./funcions_arrow.html" target="blank">Definició i ús de funcions arrow</a></p>
-    <p><a href="./string_methods.html" target="blank">Mètodes amb strings</a></p>
-    <p><a href="./number_methods.html" target="blank">Mètodes amb number</a></p>
-    <p><a href="./array_methods.html" target="blank">Mètodes amb arrays</a></p>
+    <p><a href="./string_methods.html" target="blank">Mètodes amb <i>strings</i></a></p>
+    <p><a href="./number_methods.html" target="blank">Mètodes amb <i>number</i></a></p>
+    <p><a href="./array_methods.html" target="blank">Mètodes amb <i>array</i></a></p>
     <p><a href="./bucle_for.html" target="blank">Exercicis amb el bucle <i>for</i></a></p>
     <p><a href="./bucle_while.html" target="blank">Exercicis amb el blucle <i>while</i></a></p>
-    <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector()</i>, <i>addEventListener()</i> i propietats del DOM</a></p>
-    <p><a href="./filtre_elements.html" target="blank">Exercicis de <i>querySelectorAll</i> i canvis d'atributs i classes </a></p>
+    <p><a href="./regExp.html">Proves d'expressions regulars (RegEx)</a></p>
     <p><a href="./funcions_temps.html" target="blank">Funcions cronometrades: <i>setInterval()</i> i <i>setTimeout()</i></a></p>
+    <p><a href="./exercicis_repas/exercicis.html" target="blank"><b>Repàs i col·lecció d'exercicis</b></a></p>
+
+    <br><h3>Exercicis del DOM:</h3>
+    <p><a href="./querySelector.html" target="blank">Exercicis de <i>querySelector()</i>, <i>addEventListener()</i> i propietats del DOM</a></p>
+    <p><a href="./filtre_elements.html" target="blank">Exercicis de <i>querySelectorAll</i> i canvis d'atributs i classes (filtres d'elements)</a></p>
     <p><a href="./countdown.html" target="blank">Exemple de funcions cronometrades: compte enrere</a></p>
     <p><a href="./tres-estils/estils.html" target="blank">Exercici selector de tema sense canviar de pàgina (tres estils)</a></p>
+    <p><a href="./lang_import_export.html" target="blank">Canvi de l'idioma d'un web (amb exemple de import/export)</a></p>
+    <p><a href="./lightbox.html" target="blank">Lightbox (finestra de notificació flotant)</a></p>
+    <p><a href="./text_animations.html" target="blank">Animacions de text i GIF</a></p>
+    <p><a href="./img_slider.html" target="blank">Sliders d'imatges (carousel)</a></p>
+    <p><a href="./exercicis_DOM/exercicis_DOM.html"  target="blank"><b>Col·lecció d'exercicis de DOM</b></a></p>
 
-    <hr>
+    <br><h3>Emmagatzematge i recuperació d'informació:</h3>
+    <p><a href="./localstorage.html" target="blank">Emmagatzematge local d'informació (<i>local storage</i>)</a></p>
+    <p><a href="./fetch.html">Asincronía i recuperació de dades d'un servidor (<i>fetch</i>)</a></p>
 
-    <p><a href="./exercicis_repas/exercicis.html" target="blank">Repàs i col·lecció d'exercicis</a></p>
-    <p><a href="./exercicis_DOM/exercicis_DOM.html"  target="blank">Col·lecció d'exercicis de DOM</a></p>
+    <br><h3>Altres exercicis:</h3>
+    <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
+    <p><a href="./scroll_mouse.html" target="blank">Moviment d'elements usant l'scroll i la posició del ratolí</a></p>
+    <p><a href="./snap_scroll.html" target="blank">Snap scroll (scroll forçat a les seccions de la pàgina)</a></p>
+    <p><a href="./smooth_scroll.html" target="blank">Smooth scroll (scroll suau entre seccions al clicar enllaços)</a></p>
 
-
-    <h6 title="això és un títol h6">&copy; Omar Olmedo Ferrer</h6>
+    <br><h6 title="això és un títol h6">&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
