apunts actualitzats, exercicis de fetch, inici de CRUD amb firebase

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -45,7 +45,8 @@
 
     <br><h3>Emmagatzematge i recuperació d'informació:</h3>
     <p><a href="./localstorage.html" target="blank">Emmagatzematge local d'informació (<i>local storage</i>)</a></p>
-    <p><a href="./fetch.html">Asincronía i recuperació de dades d'un servidor (<i>fetch</i>)</a></p>
+    <p><a href="./fetch.html" target="blank">Asincronía i recuperació de dades d'un servidor (<i>fetch</i> amb mètode GET)</a></p>
+    <p><a href="./firebase.html" target="blank">Alta, baixa, modificació i consulta d'entrades a una base de dades (CRUD amb Firebase Realtime Database)</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
